--- a/traineeapp/WebContent/WEB-INF/web.xml
+++ b/traineeapp/WebContent/WEB-INF/web.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://java.sun.com/xml/ns/javaee" xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd" id="WebApp_ID" version="2.5">
   <display-name>traineemanagementapp</display-name>
-  <welcome-file-list>
-    <welcome-file>login.jsp</welcome-file>
-  </welcome-file-list>
+
+ 
+
   <servlet>
     <servlet-name>traineecontroller</servlet-name>
     <servlet-class>com.traineeapp.controller.TraineeController</servlet-class>
@@ -15,18 +15,25 @@
   <listener>
     <listener-class>com.traineeapp.listeners.DbDriverListner</listener-class>
   </listener>
+  
   <servlet>
     <servlet-name>LoginController</servlet-name>
     <servlet-class>com.traineeapp.controller.LoginController</servlet-class>
+    <load-on-startup>1</load-on-startup>
   </servlet>
-  <servlet-mapping>
+      <servlet-mapping>
     <servlet-name>LoginController</servlet-name>
     <url-pattern>/loginController</url-pattern>
   </servlet-mapping>
+  
   <servlet>
     <servlet-name>LogoutController</servlet-name>
     <servlet-class>com.traineeapp.controller.LogoutController</servlet-class>
   </servlet>
+
+ 
+
+  
   <servlet-mapping>
     <servlet-name>LogoutController</servlet-name>
     <url-pattern>/logout</url-pattern>
